--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # firebase
+  firebase_messaging: ^14.7.4
+  firebase_core: ^2.22.0
+  flutter_local_notifications: ^16.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
